--- a/KECReportFormat.tex
+++ b/KECReportFormat.tex
@@ -3,7 +3,7 @@
 %DO NOT MAKE CHANGES IN THIS FILE
 
 \documentclass[12pt, a4paper]{report}
-\usepackage[left = 1.5in, right = 1in, top = 1in, bottom = 1in]{geometry}%for margin
+\usepackage[left = 1.5in, right = 1.25in, top = 1.25in, bottom = 1.25in]{geometry}%for margin
 \usepackage{amsfonts, amsmath, amssymb} %for mathematical equations
 \usepackage{graphicx} %for images
 \usepackage{times} %font Times New Roman Font
@@ -128,6 +128,7 @@
 	\large{\textbf{Supervised by:}}\\
 	\large{\textbf{\supervisor}}\\
 	\large{\textbf{\degSup}}\\
+	\large{\textbf{\orgSUP}}\\
 \fi
 
 \vfill	%vertically fill the space 
@@ -164,42 +165,44 @@ Nepal
 %command for Approval Letter
 \newcommand{\KECapproval}
 {
-%\chapter*{Kantipur Engineering College
-%%\vskip -10pt}%Required only for Final Defense of Major Project
-%\begin{center}
-%\fontsize{12.8pt}{1} %size decreaced to adjust department name in single line
-%\textbf{
-%\MakeUppercase{\submittedTo}\\ %for department name
+\chapter*{Kantipur Engineering College
+\vskip -10pt}%Required only for Final Defense of Major Project
+\begin{center}
+\fontsize{12.3pt}{1} %size decreaced to adjust department name in single line
+\textbf{
+\MakeUppercase{\submittedTo}\\ %for department name
 }
-%\vskip 10pt
-%\fontsize{16pt}{1}
-%\textbf{APPROVAL LETTER}
-%\end{center}
-%\vskip -16pt
-%\addcontentsline{toc}{chapter}{Approval Letter}%
-%The undersigned certify that they have read and recommended to the Institute of Engineering for acceptance, a project report entitled "\projectTitle " submitted by \\
-%\submittedBy \\
-%in partial fulfillment for the degree of \degree. \par
-%{\vspace{25pt}
-%..........................................\\
-%Supervisor\\
-%\supervisor \\
-%\degSup\\
-%\vspace{25pt}\\
-%..........................................\\
-%External Examiner\\
-%\external\\
-%\degExternal\\
-%\vspace{25pt}\\
-%..........................................\\
-%$\hod\\
-%Head of Department\\
-%\submittedTo
-%\vspace{10pt}\\
-%Date: \defMonth\space\defDay ,\space \defYear%
-%\singlespacing\par
-%} %single spacing for the texts inside {}
-%}
+\vskip 10pt
+\fontsize{16pt}{1}
+\textbf{APPROVAL LETTER}
+\end{center}
+\vskip -16pt
+\addcontentsline{toc}{chapter}{Approval Letter}%
+The undersigned certify that they have read and recommended to the Institute of Engineering for acceptance, a project report entitled \textbf{"\projectTitle "} submitted by \\
+\submittedBy \\
+in partial fulfillment for the degree of \degree. \par
+{\vspace{25pt}
+..........................................\\
+Supervisor\\
+\supervisor \\
+\degSup\\
+\orgSUP\\
+\vspace{25pt}\\
+..........................................\\
+External Examiner\\
+\external\\
+\degExternal\\
+\orgExt\\
+\vspace{25pt}\\
+..........................................\\
+\hod\\
+Head of Department\\
+\submittedTo
+\vspace{10pt}\\
+Date: \defMonth\space\defDay ,\space \defYear%
+\singlespacing\par
+} %single spacing for the texts inside {}
+}
 
 %command for list of abbreviations
 \newcommand{\KECloa}
