--- a/KECReportFormat.tex
+++ b/KECReportFormat.tex
@@ -127,8 +127,8 @@
 	\vfill	%vertically fill the space 
 	\large{\textbf{Supervised by:}}\\
 	\large{\textbf{\supervisor}}\\
-	\large{\textbf{\degSup}}\\
-	\large{\textbf{\orgSUP}}\\
+	%\large{\textbf{\degSup}}\\
+%	\large{\textbf{\orgSUP}}\\
 \fi
 
 \vfill	%vertically fill the space 
@@ -196,6 +196,7 @@ External Examiner\\
 \vspace{25pt}\\
 ..........................................\\
 \hod\\
+Associate Professor\\
 Head of Department\\
 \submittedTo
 \vspace{10pt}\\
