--- a/major project proposal.tex
+++ b/major project proposal.tex
@@ -948,6 +948,8 @@ Hence, this intelligence system would be great to the currently growing world wi
 \item Prediction on  the personal basis
 \end{enumerate}
 
+\newpage
+\pagebreak
 \renewcommand\bibname{References} % Change heading to References
 \bibliographystyle{IEEEtran} % to use IEEE Format for referencing
 \addcontentsline{toc}{chapter}{References} % to add references in TOC
